[nba810] Added modules_install target

--- a/debian-bsps/aurora-810/nba810/Makefile
+++ b/debian-bsps/aurora-810/nba810/Makefile
@@ -27,3 +27,6 @@ all:
 
 clean:
 	$(MAKE) -C /lib/modules/$(KSRC)/build M=$(shell pwd) clean
+
+install:
+	$(MAKE) -C /lib/modules/$(KSRC)/build M=$(shell pwd) modules_install
