[init] fixed alias name
Signed-off-by: Andrew Sapronov <andrew.sapronov@gmail.com>

--- a/debian-bsps/aurora-221/aurora-sw.service
+++ b/debian-bsps/aurora-221/aurora-sw.service
@@ -10,5 +10,5 @@ TimeoutSec=1min
 ExecStart=/usr/sbin/i2c_init.sh
 
 [Install]
-Alias=sonic-platform-netberg-aurora-sw.target
+Alias=sonic-platform-netberg-aurora-sw.service
 WantedBy=multi-user.target
